fix @ which was wrong

--- a/optimot.org
+++ b/optimot.org
@@ -24,7 +24,7 @@ Diagrams are from Pyjam, creator of the layout, from the [[https://bepo.fr/wiki/
 #define OM_EQL  KC_8    // =
 #define OM_LPRN KC_9    // (
 #define OM_RPRN KC_0    // )
-#define OM_AT   KC_6    // @
+#define OM_AT   KC_MINS // @
 #define OM_HASH KC_EQL  // #
 #+end_src
 ** Row 2
