--- a/optimot.org
+++ b/optimot.org
@@ -4,6 +4,22 @@ This is using https://github.com/qmk/qmk_firmware/blob/master/quantum/keymap_ext
 
 Diagrams are from Pyjam, creator of the layout, from the [[https://bepo.fr/wiki/Contact][BÉPO discord]]
 #+begin_src c :tangle keymap_optimot.h
+/* Copyright 2022 Bastien VERSINI
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 #pragma once
 
 #include "keymap.h"
@@ -118,7 +134,7 @@ Diagrams are from Pyjam, creator of the layout, from the [[https://bepo.fr/wiki/
 #define OM_NBH  ALGR(OM_MINS) // ‑ NON BREAKING HYPHEN
 #define OM_PLMN ALGR(OM_PLUS) // ±
 #define OM_MUL  ALGR(OM_ASTR) // ×
-#define OM_BSLS ALGR(OM_SLASH)// (backslash)
+#define OM_BSLS ALGR(OM_SLSH) // (backslash)
 #define OM_NEQL ALGR(OM_EQL)  // ≠
 #define OM_LBRC ALGR(OM_LPRN) // [
 #define OM_RBRC ALGR(OM_RPRN) // ]
